// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`init notifyAccountNotVerified() should dispatch a notification because the base email integration is not verified 1`] = `
Array [
  Object {
    "payload": Object {
      "allowHTML": true,
      "buttons": Array [],
      "closeButton": false,
      "dismissAfter": 0,
      "dismissible": false,
      "id": "account-not-verified-notification",
      "message": "Your email address is not verified. <span class=\\"text-primary\\">Click here to resend the verification email.</span>",
      "onClick": [Function],
      "position": "top-center",
      "status": "warning",
      "style": "banner",
    },
    "type": "reapop/upsertNotification",
  },
]
`;

exports[`init notifyAccountNotVerified() should not do anything because the base email integration is verified 1`] = `Array []`;

exports[`init notifyDeprecatedTld() should dispatch a notification because the URL's TLD is \`.io\` 1`] = `
Array [
  Object {
    "payload": Object {
      "allowHTML": true,
      "buttons": Array [],
      "closeButton": false,
      "dismissAfter": 0,
      "dismissible": false,
      "id": "deprecated-tld-notification",
      "message": "We're now a dot-com 🎉 please update your helpdesk links and bookmarks to <span class=\\"text-primary\\">https://acme.gorgias.com/</span>. This message will be hidden after you login there.",
      "onClick": [Function],
      "position": "top-center",
      "status": "warning",
      "style": "banner",
    },
    "type": "reapop/upsertNotification",
  },
]
`;

exports[`init notifyDeprecatedTld() should not do anything because the URL's TLD is not \`.io\` 1`] = `Array []`;

exports[`init notifyUserImpersonated() should dispatch a notification because user is impersonated 1`] = `
Array [
  Object {
    "payload": Object {
      "allowHTML": true,
      "buttons": Array [],
      "closeButton": false,
      "dismissAfter": 0,
      "dismissible": false,
      "id": "user-impersonated-notification",
      "message": "You are impersonating <b>Alex Plugaru</b> in <b>development</b> environment.",
      "position": "top-center",
      "status": "warning",
      "style": "banner",
    },
    "type": "reapop/upsertNotification",
  },
]
`;

exports[`init notifyUserImpersonated() should not do anything because user is not impersonated 1`] = `Array []`;

exports[`init toInitialStoreState() should return the expected store state 1`] = `
Object {
  "agents": Immutable.Map {
    "all": Immutable.List [
      Immutable.Map {
        "lastname": "Plugaru",
        "settings": Immutable.List [
          Immutable.Map {
            "data": Immutable.Map {
              "show_macros": true,
              "macros_default_to_search_popover": true,
              "prefill_best_macro": true,
              "available": true,
              "hide_tips": true,
              "forward_calls": false,
            },
            "id": 3,
            "type": "preferences",
          },
        ],
        "meta": Immutable.Map {
          "profile_picture_url": "https://config.gorgias.io/production/picture",
        },
        "active": true,
        "bio": "CTO",
        "deactivated_datetime": null,
        "has_2fa_enabled": false,
        "name": "Alex Plugaru",
        "external_id": "2",
        "created_datetime": "2016-12-22T19:36:12.487448+00:00",
        "role": Immutable.Map {
          "name": "admin",
        },
        "country": "US",
        "language": "en",
        "timezone": "EST",
        "id": 2,
        "firstname": "Alex",
        "email": "alex@gorgias.io",
        "updated_datetime": "2016-12-22T19:36:12.489432+00:00",
      },
    ],
  },
  "billing": Immutable.Map {
    "products": Immutable.List [
      Immutable.Map {
        "id": "prod_LsH6kV35G6zKWo",
        "type": "helpdesk",
        "prices": Immutable.List [
          Immutable.Map {
            "cost_per_ticket": 0.4,
            "interval": "month",
            "phone_limits": Immutable.Map {
              "billing": 50,
            },
            "public": true,
            "product_id": "prod_LsH6kV35G6zKWo",
            "name": "Basic",
            "trial_period_days": 7,
            "order": 2,
            "currency": "usd",
            "legacy_id": "basic-monthly-usd-4",
            "price_id": "price_1LJBjWI9qXomtXqSPZn8LqlD",
            "addons": Immutable.List [
              "price_1LJBjXI9qXomtXqSSX34F3we",
            ],
            "free_tickets": 300,
            "limits": Immutable.Map {
              "messages": Immutable.Map {
                "default": 100,
                "max": 100,
                "min": 75,
              },
              "tickets": Immutable.Map {
                "default": 100,
                "max": 100,
                "min": 75,
              },
            },
            "amount": 6000,
            "features": Immutable.Map {
              "view_sharing": Immutable.Map {
                "enabled": true,
              },
              "automation_cancellations_flow": Immutable.Map {
                "enabled": false,
              },
              "revenue_statistics": Immutable.Map {
                "enabled": false,
              },
              "facebook_comment": Immutable.Map {
                "enabled": true,
              },
              "satisfaction_surveys": Immutable.Map {
                "enabled": true,
              },
              "api_1st_party_rate_limit": Immutable.Map {
                "enabled": true,
                "rate_limit": Immutable.Map {
                  "interval_ms": 2000,
                  "max_burst": 40,
                },
              },
              "twitter_integration": Immutable.Map {
                "enabled": false,
                "limit": 0,
              },
              "user_roles": Immutable.Map {
                "enabled": true,
              },
              "magento_integration": Immutable.Map {
                "enabled": false,
              },
              "automation_managed_rules": Immutable.Map {
                "enabled": false,
              },
              "overview_live_statistics": Immutable.Map {
                "enabled": true,
              },
              "instagram_comment": Immutable.Map {
                "enabled": true,
              },
              "yotpo_integration": Immutable.Map {
                "enabled": true,
              },
              "help_center": Immutable.Map {
                "enabled": true,
              },
              "api_3rd_party_rate_limit": Immutable.Map {
                "enabled": true,
                "rate_limit": Immutable.Map {
                  "interval_ms": 20000,
                  "max_burst": 40,
                },
              },
              "automation_return_flow": Immutable.Map {
                "enabled": false,
              },
              "instagram_dm": Immutable.Map {
                "enabled": true,
              },
              "teams": Immutable.Map {
                "enabled": true,
              },
              "automation_report_issue_flow": Immutable.Map {
                "enabled": false,
              },
              "automation_self_service_statistics": Immutable.Map {
                "enabled": false,
              },
              "phone_number": Immutable.Map {
                "enabled": true,
                "limit": 1,
              },
              "automation_track_order_flow": Immutable.Map {
                "enabled": false,
              },
              "chat_campaigns": Immutable.Map {
                "enabled": true,
              },
              "auto_assignment": Immutable.Map {
                "enabled": true,
              },
              "users_live_statistics": Immutable.Map {
                "enabled": false,
              },
            },
            "is_legacy": false,
            "integrations": 150,
          },
          Immutable.Map {
            "cost_per_ticket": 0.4,
            "interval": "year",
            "phone_limits": Immutable.Map {
              "billing": 50,
            },
            "public": true,
            "product_id": "prod_LsH6kV35G6zKWo",
            "name": "Basic",
            "trial_period_days": 7,
            "order": 2,
            "currency": "usd",
            "legacy_id": "basic-yearly-usd-4",
            "price_id": "price_1LJBjYI9qXomtXqSLEjOrpmV",
            "addons": Immutable.List [
              "price_1LJBjZI9qXomtXqSPNgkEZpl",
            ],
            "free_tickets": 3600,
            "limits": Immutable.Map {
              "messages": Immutable.Map {
                "default": 100,
                "max": 100,
                "min": 75,
              },
              "tickets": Immutable.Map {
                "default": 100,
                "max": 100,
                "min": 75,
              },
            },
            "amount": 60000,
            "features": Immutable.Map {
              "view_sharing": Immutable.Map {
                "enabled": true,
              },
              "automation_cancellations_flow": Immutable.Map {
                "enabled": false,
              },
              "revenue_statistics": Immutable.Map {
                "enabled": false,
              },
              "facebook_comment": Immutable.Map {
                "enabled": true,
              },
              "satisfaction_surveys": Immutable.Map {
                "enabled": true,
              },
              "api_1st_party_rate_limit": Immutable.Map {
                "enabled": true,
                "rate_limit": Immutable.Map {
                  "interval_ms": 2000,
                  "max_burst": 40,
                },
              },
              "twitter_integration": Immutable.Map {
                "enabled": false,
                "limit": 0,
              },
              "user_roles": Immutable.Map {
                "enabled": true,
              },
              "magento_integration": Immutable.Map {
                "enabled": false,
              },
              "automation_managed_rules": Immutable.Map {
                "enabled": false,
              },
              "overview_live_statistics": Immutable.Map {
                "enabled": true,
              },
              "instagram_comment": Immutable.Map {
                "enabled": true,
              },
              "yotpo_integration": Immutable.Map {
                "enabled": true,
              },
              "help_center": Immutable.Map {
                "enabled": true,
              },
              "api_3rd_party_rate_limit": Immutable.Map {
                "enabled": true,
                "rate_limit": Immutable.Map {
                  "interval_ms": 20000,
                  "max_burst": 40,
                },
              },
              "automation_return_flow": Immutable.Map {
                "enabled": false,
              },
              "instagram_dm": Immutable.Map {
                "enabled": true,
              },
              "teams": Immutable.Map {
                "enabled": true,
              },
              "automation_report_issue_flow": Immutable.Map {
                "enabled": false,
              },
              "automation_self_service_statistics": Immutable.Map {
                "enabled": false,
              },
              "phone_number": Immutable.Map {
                "enabled": true,
                "limit": 1,
              },
              "automation_track_order_flow": Immutable.Map {
                "enabled": false,
              },
              "chat_campaigns": Immutable.Map {
                "enabled": true,
              },
              "auto_assignment": Immutable.Map {
                "enabled": true,
              },
              "users_live_statistics": Immutable.Map {
                "enabled": false,
              },
            },
            "is_legacy": false,
            "integrations": 150,
          },
          Immutable.Map {
            "cost_per_ticket": 0.36,
            "interval": "month",
            "phone_limits": Immutable.Map {
              "billing": 200,
            },
            "public": true,
            "product_id": "prod_LsH6kV35G6zKWo",
            "name": "Pro",
            "trial_period_days": 7,
            "order": 3,
            "currency": "usd",
            "legacy_id": "pro-monthly-usd-4",
            "price_id": "price_1LJBjaI9qXomtXqSvYfzmmEU",
            "addons": Immutable.List [
              "price_1LJBjbI9qXomtXqS2sfi1J7P",
            ],
            "free_tickets": 2000,
            "limits": Immutable.Map {
              "messages": Immutable.Map {
                "default": 100,
                "max": 100,
                "min": 75,
              },
              "tickets": Immutable.Map {
                "default": 100,
                "max": 100,
                "min": 75,
              },
            },
            "amount": 36000,
            "features": Immutable.Map {
              "view_sharing": Immutable.Map {
                "enabled": true,
              },
              "automation_cancellations_flow": Immutable.Map {
                "enabled": false,
              },
              "revenue_statistics": Immutable.Map {
                "enabled": true,
              },
              "facebook_comment": Immutable.Map {
                "enabled": true,
              },
              "satisfaction_surveys": Immutable.Map {
                "enabled": true,
              },
              "api_1st_party_rate_limit": Immutable.Map {
                "enabled": true,
                "rate_limit": Immutable.Map {
                  "interval_ms": 2000,
                  "max_burst": 40,
                },
              },
              "twitter_integration": Immutable.Map {
                "enabled": false,
                "limit": 0,
              },
              "user_roles": Immutable.Map {
                "enabled": true,
              },
              "magento_integration": Immutable.Map {
                "enabled": true,
              },
              "automation_managed_rules": Immutable.Map {
                "enabled": false,
              },
              "overview_live_statistics": Immutable.Map {
                "enabled": true,
              },
              "instagram_comment": Immutable.Map {
                "enabled": true,
              },
              "yotpo_integration": Immutable.Map {
                "enabled": true,
              },
              "help_center": Immutable.Map {
                "enabled": true,
              },
              "api_3rd_party_rate_limit": Immutable.Map {
                "enabled": true,
                "rate_limit": Immutable.Map {
                  "interval_ms": 20000,
                  "max_burst": 40,
                },
              },
              "automation_return_flow": Immutable.Map {
                "enabled": false,
              },
              "instagram_dm": Immutable.Map {
                "enabled": true,
              },
              "teams": Immutable.Map {
                "enabled": true,
              },
              "automation_report_issue_flow": Immutable.Map {
                "enabled": false,
              },
              "automation_self_service_statistics": Immutable.Map {
                "enabled": false,
              },
              "phone_number": Immutable.Map {
                "enabled": true,
                "limit": 3,
              },
              "automation_track_order_flow": Immutable.Map {
                "enabled": false,
              },
              "chat_campaigns": Immutable.Map {
                "enabled": true,
              },
              "auto_assignment": Immutable.Map {
                "enabled": true,
              },
              "users_live_statistics": Immutable.Map {
                "enabled": true,
              },
            },
            "is_legacy": false,
            "integrations": 150,
          },
          Immutable.Map {
            "cost_per_ticket": 0.36,
            "interval": "year",
            "phone_limits": Immutable.Map {
              "billing": 200,
            },
            "public": true,
            "product_id": "prod_LsH6kV35G6zKWo",
            "name": "Pro",
            "trial_period_days": 7,
            "order": 3,
            "currency": "usd",
            "legacy_id": "pro-yearly-usd-4",
            "price_id": "price_1LJBjbI9qXomtXqShB9YLy7V",
            "addons": Immutable.List [
              "price_1LJBjdI9qXomtXqSlp9sh6iQ",
            ],
            "free_tickets": 24000,
            "limits": Immutable.Map {
              "messages": Immutable.Map {
                "default": 100,
                "max": 100,
                "min": 75,
              },
              "tickets": Immutable.Map {
                "default": 100,
                "max": 100,
                "min": 75,
              },
            },
            "amount": 360000,
            "features": Immutable.Map {
              "view_sharing": Immutable.Map {
                "enabled": true,
              },
              "automation_cancellations_flow": Immutable.Map {
                "enabled": false,
              },
              "revenue_statistics": Immutable.Map {
                "enabled": true,
              },
              "facebook_comment": Immutable.Map {
                "enabled": true,
              },
              "satisfaction_surveys": Immutable.Map {
                "enabled": true,
              },
              "api_1st_party_rate_limit": Immutable.Map {
                "enabled": true,
                "rate_limit": Immutable.Map {
                  "interval_ms": 2000,
                  "max_burst": 40,
                },
              },
              "twitter_integration": Immutable.Map {
                "enabled": false,
                "limit": 0,
              },
              "user_roles": Immutable.Map {
                "enabled": true,
              },
              "magento_integration": Immutable.Map {
                "enabled": true,
              },
              "automation_managed_rules": Immutable.Map {
                "enabled": false,
              },
              "overview_live_statistics": Immutable.Map {
                "enabled": true,
              },
              "instagram_comment": Immutable.Map {
                "enabled": true,
              },
              "yotpo_integration": Immutable.Map {
                "enabled": true,
              },
              "help_center": Immutable.Map {
                "enabled": true,
              },
              "api_3rd_party_rate_limit": Immutable.Map {
                "enabled": true,
                "rate_limit": Immutable.Map {
                  "interval_ms": 20000,
                  "max_burst": 40,
                },
              },
              "automation_return_flow": Immutable.Map {
                "enabled": false,
              },
              "instagram_dm": Immutable.Map {
                "enabled": true,
              },
              "teams": Immutable.Map {
                "enabled": true,
              },
              "automation_report_issue_flow": Immutable.Map {
                "enabled": false,
              },
              "automation_self_service_statistics": Immutable.Map {
                "enabled": false,
              },
              "phone_number": Immutable.Map {
                "enabled": true,
                "limit": 3,
              },
              "automation_track_order_flow": Immutable.Map {
                "enabled": false,
              },
              "chat_campaigns": Immutable.Map {
                "enabled": true,
              },
              "auto_assignment": Immutable.Map {
                "enabled": true,
              },
              "users_live_statistics": Immutable.Map {
                "enabled": true,
              },
            },
            "is_legacy": false,
            "integrations": 150,
          },
          Immutable.Map {
            "cost_per_ticket": 0.36,
            "interval": "month",
            "phone_limits": Immutable.Map {
              "billing": 750,
            },
            "public": true,
            "product_id": "prod_LsH6kV35G6zKWo",
            "name": "Advanced",
            "trial_period_days": 7,
            "order": 4,
            "currency": "usd",
            "legacy_id": "advanced-monthly-usd-4",
            "price_id": "price_1LJBjdI9qXomtXqS8RzPPA7K",
            "addons": Immutable.List [
              "price_1LJBjeI9qXomtXqSXRjmhPsL",
            ],
            "free_tickets": 5000,
            "limits": Immutable.Map {
              "messages": Immutable.Map {
                "default": 100,
                "max": 100,
                "min": 75,
              },
              "tickets": Immutable.Map {
                "default": 100,
                "max": 100,
                "min": 75,
              },
            },
            "amount": 90000,
            "features": Immutable.Map {
              "view_sharing": Immutable.Map {
                "enabled": true,
              },
              "automation_cancellations_flow": Immutable.Map {
                "enabled": false,
              },
              "revenue_statistics": Immutable.Map {
                "enabled": true,
              },
              "facebook_comment": Immutable.Map {
                "enabled": true,
              },
              "satisfaction_surveys": Immutable.Map {
                "enabled": true,
              },
              "api_1st_party_rate_limit": Immutable.Map {
                "enabled": true,
                "rate_limit": Immutable.Map {
                  "interval_ms": 2000,
                  "max_burst": 40,
                },
              },
              "twitter_integration": Immutable.Map {
                "enabled": true,
                "limit": 2,
              },
              "user_roles": Immutable.Map {
                "enabled": true,
              },
              "magento_integration": Immutable.Map {
                "enabled": true,
              },
              "automation_managed_rules": Immutable.Map {
                "enabled": false,
              },
              "overview_live_statistics": Immutable.Map {
                "enabled": true,
              },
              "instagram_comment": Immutable.Map {
                "enabled": true,
              },
              "yotpo_integration": Immutable.Map {
                "enabled": true,
              },
              "help_center": Immutable.Map {
                "enabled": true,
              },
              "api_3rd_party_rate_limit": Immutable.Map {
                "enabled": true,
                "rate_limit": Immutable.Map {
                  "interval_ms": 20000,
                  "max_burst": 40,
                },
              },
              "automation_return_flow": Immutable.Map {
                "enabled": false,
              },
              "instagram_dm": Immutable.Map {
                "enabled": true,
              },
              "teams": Immutable.Map {
                "enabled": true,
              },
              "automation_report_issue_flow": Immutable.Map {
                "enabled": false,
              },
              "automation_self_service_statistics": Immutable.Map {
                "enabled": false,
              },
              "phone_number": Immutable.Map {
                "enabled": true,
                "limit": 10,
              },
              "automation_track_order_flow": Immutable.Map {
                "enabled": false,
              },
              "chat_campaigns": Immutable.Map {
                "enabled": true,
              },
              "auto_assignment": Immutable.Map {
                "enabled": true,
              },
              "users_live_statistics": Immutable.Map {
                "enabled": true,
              },
            },
            "is_legacy": false,
            "integrations": 150,
          },
          Immutable.Map {
            "cost_per_ticket": 0.36,
            "interval": "year",
            "phone_limits": Immutable.Map {
              "billing": 750,
            },
            "public": true,
            "product_id": "prod_LsH6kV35G6zKWo",
            "name": "Advanced",
            "trial_period_days": 7,
            "order": 4,
            "currency": "usd",
            "legacy_id": "advanced-yearly-usd-4",
            "price_id": "price_1LJBjfI9qXomtXqSeKJ5lJjD",
            "addons": Immutable.List [
              "price_1LJBjgI9qXomtXqSBZoBcg7G",
            ],
            "free_tickets": 60000,
            "limits": Immutable.Map {
              "messages": Immutable.Map {
                "default": 100,
                "max": 100,
                "min": 75,
              },
              "tickets": Immutable.Map {
                "default": 100,
                "max": 100,
                "min": 75,
              },
            },
            "amount": 900000,
            "features": Immutable.Map {
              "view_sharing": Immutable.Map {
                "enabled": true,
              },
              "automation_cancellations_flow": Immutable.Map {
                "enabled": false,
              },
              "revenue_statistics": Immutable.Map {
                "enabled": true,
              },
              "facebook_comment": Immutable.Map {
                "enabled": true,
              },
              "satisfaction_surveys": Immutable.Map {
                "enabled": true,
              },
              "api_1st_party_rate_limit": Immutable.Map {
                "enabled": true,
                "rate_limit": Immutable.Map {
                  "interval_ms": 2000,
                  "max_burst": 40,
                },
              },
              "twitter_integration": Immutable.Map {
                "enabled": true,
                "limit": 2,
              },
              "user_roles": Immutable.Map {
                "enabled": true,
              },
              "magento_integration": Immutable.Map {
                "enabled": true,
              },
              "automation_managed_rules": Immutable.Map {
                "enabled": false,
              },
              "overview_live_statistics": Immutable.Map {
                "enabled": true,
              },
              "instagram_comment": Immutable.Map {
                "enabled": true,
              },
              "yotpo_integration": Immutable.Map {
                "enabled": true,
              },
              "help_center": Immutable.Map {
                "enabled": true,
              },
              "api_3rd_party_rate_limit": Immutable.Map {
                "enabled": true,
                "rate_limit": Immutable.Map {
                  "interval_ms": 20000,
                  "max_burst": 40,
                },
              },
              "automation_return_flow": Immutable.Map {
                "enabled": false,
              },
              "instagram_dm": Immutable.Map {
                "enabled": true,
              },
              "teams": Immutable.Map {
                "enabled": true,
              },
              "automation_report_issue_flow": Immutable.Map {
                "enabled": false,
              },
              "automation_self_service_statistics": Immutable.Map {
                "enabled": false,
              },
              "phone_number": Immutable.Map {
                "enabled": true,
                "limit": 10,
              },
              "automation_track_order_flow": Immutable.Map {
                "enabled": false,
              },
              "chat_campaigns": Immutable.Map {
                "enabled": true,
              },
              "auto_assignment": Immutable.Map {
                "enabled": true,
              },
              "users_live_statistics": Immutable.Map {
                "enabled": true,
              },
            },
            "is_legacy": false,
            "integrations": 150,
          },
        ],
      },
      Immutable.Map {
        "id": "prod_LsHD5xmSqoFBBs",
        "type": "automation",
        "prices": Immutable.List [
          Immutable.Map {
            "automation_addon_included": true,
            "interval": "month",
            "additional_cost_per_ticket": 0.2,
            "automation_addon_discount": 0,
            "product_id": "prod_LsHD5xmSqoFBBs",
            "name": "Basic",
            "order": 2,
            "currency": "usd",
            "legacy_id": "basic-automation-full-price-monthly-usd-4",
            "price_id": "price_1LJBjXI9qXomtXqSSX34F3we",
            "amount": 3000,
            "features": Immutable.Map {
              "automation_managed_rules": Immutable.Map {
                "enabled": true,
              },
              "automation_track_order_flow": Immutable.Map {
                "enabled": true,
              },
              "automation_report_issue_flow": Immutable.Map {
                "enabled": true,
              },
              "automation_cancellations_flow": Immutable.Map {
                "enabled": true,
              },
              "automation_return_flow": Immutable.Map {
                "enabled": true,
              },
              "automation_self_service_statistics": Immutable.Map {
                "enabled": true,
              },
            },
            "base_price_id": "price_1LJBjWI9qXomtXqSPZn8LqlD",
          },
          Immutable.Map {
            "automation_addon_included": true,
            "interval": "year",
            "additional_cost_per_ticket": 0.2,
            "automation_addon_discount": 0,
            "product_id": "prod_LsHD5xmSqoFBBs",
            "name": "Basic",
            "order": 2,
            "currency": "usd",
            "legacy_id": "basic-automation-full-price-yearly-usd-4",
            "price_id": "price_1LJBjZI9qXomtXqSPNgkEZpl",
            "amount": 30000,
            "features": Immutable.Map {
              "automation_managed_rules": Immutable.Map {
                "enabled": true,
              },
              "automation_track_order_flow": Immutable.Map {
                "enabled": true,
              },
              "automation_report_issue_flow": Immutable.Map {
                "enabled": true,
              },
              "automation_cancellations_flow": Immutable.Map {
                "enabled": true,
              },
              "automation_return_flow": Immutable.Map {
                "enabled": true,
              },
              "automation_self_service_statistics": Immutable.Map {
                "enabled": true,
              },
            },
            "base_price_id": "price_1LJBjYI9qXomtXqSLEjOrpmV",
          },
          Immutable.Map {
            "automation_addon_included": true,
            "interval": "month",
            "additional_cost_per_ticket": 0.18,
            "automation_addon_discount": 0,
            "product_id": "prod_LsHD5xmSqoFBBs",
            "name": "Pro",
            "order": 3,
            "currency": "usd",
            "legacy_id": "pro-automation-full-price-monthly-usd-4",
            "price_id": "price_1LJBjbI9qXomtXqS2sfi1J7P",
            "amount": 18000,
            "features": Immutable.Map {
              "automation_managed_rules": Immutable.Map {
                "enabled": true,
              },
              "automation_track_order_flow": Immutable.Map {
                "enabled": true,
              },
              "automation_report_issue_flow": Immutable.Map {
                "enabled": true,
              },
              "automation_cancellations_flow": Immutable.Map {
                "enabled": true,
              },
              "automation_return_flow": Immutable.Map {
                "enabled": true,
              },
              "automation_self_service_statistics": Immutable.Map {
                "enabled": true,
              },
            },
            "base_price_id": "price_1LJBjaI9qXomtXqSvYfzmmEU",
          },
          Immutable.Map {
            "automation_addon_included": true,
            "interval": "year",
            "additional_cost_per_ticket": 0.18,
            "automation_addon_discount": 0,
            "product_id": "prod_LsHD5xmSqoFBBs",
            "name": "Pro",
            "order": 3,
            "currency": "usd",
            "legacy_id": "pro-automation-full-price-yearly-usd-4",
            "price_id": "price_1LJBjdI9qXomtXqSlp9sh6iQ",
            "amount": 180000,
            "features": Immutable.Map {
              "automation_managed_rules": Immutable.Map {
                "enabled": true,
              },
              "automation_track_order_flow": Immutable.Map {
                "enabled": true,
              },
              "automation_report_issue_flow": Immutable.Map {
                "enabled": true,
              },
              "automation_cancellations_flow": Immutable.Map {
                "enabled": true,
              },
              "automation_return_flow": Immutable.Map {
                "enabled": true,
              },
              "automation_self_service_statistics": Immutable.Map {
                "enabled": true,
              },
            },
            "base_price_id": "price_1LJBjbI9qXomtXqShB9YLy7V",
          },
          Immutable.Map {
            "automation_addon_included": true,
            "interval": "month",
            "additional_cost_per_ticket": 0.18,
            "automation_addon_discount": 0,
            "product_id": "prod_LsHD5xmSqoFBBs",
            "name": "Advanced",
            "order": 4,
            "currency": "usd",
            "legacy_id": "advanced-automation-full-price-monthly-usd-4",
            "price_id": "price_1LJBjeI9qXomtXqSXRjmhPsL",
            "amount": 45000,
            "features": Immutable.Map {
              "automation_managed_rules": Immutable.Map {
                "enabled": true,
              },
              "automation_track_order_flow": Immutable.Map {
                "enabled": true,
              },
              "automation_report_issue_flow": Immutable.Map {
                "enabled": true,
              },
              "automation_cancellations_flow": Immutable.Map {
                "enabled": true,
              },
              "automation_return_flow": Immutable.Map {
                "enabled": true,
              },
              "automation_self_service_statistics": Immutable.Map {
                "enabled": true,
              },
            },
            "base_price_id": "price_1LJBjdI9qXomtXqS8RzPPA7K",
          },
          Immutable.Map {
            "automation_addon_included": true,
            "interval": "year",
            "additional_cost_per_ticket": 0.18,
            "automation_addon_discount": 0,
            "product_id": "prod_LsHD5xmSqoFBBs",
            "name": "Advanced",
            "order": 4,
            "currency": "usd",
            "legacy_id": "advanced-automation-full-price-yearly-usd-4",
            "price_id": "price_1LJBjgI9qXomtXqSBZoBcg7G",
            "amount": 450000,
            "features": Immutable.Map {
              "automation_managed_rules": Immutable.Map {
                "enabled": true,
              },
              "automation_track_order_flow": Immutable.Map {
                "enabled": true,
              },
              "automation_report_issue_flow": Immutable.Map {
                "enabled": true,
              },
              "automation_cancellations_flow": Immutable.Map {
                "enabled": true,
              },
              "automation_return_flow": Immutable.Map {
                "enabled": true,
              },
              "automation_self_service_statistics": Immutable.Map {
                "enabled": true,
              },
            },
            "base_price_id": "price_1LJBjfI9qXomtXqSeKJ5lJjD",
          },
        ],
      },
      Immutable.Map {
        "id": "prod_MT8Fzk7vmcT73m",
        "type": "sms",
        "prices": Immutable.List [
          Immutable.Map {
            "amount": 90,
            "currency": "usd",
            "included_tickets": 150,
            "interval": "month",
            "name": "SMS Addon 150 Monthly",
            "price_id": "price_1LkBzKI9qXomtXqSEXrSV8o4",
            "product_id": "prod_MT8Fzk7vmcT73m",
            "sms_extra_ticket_cost": 1.2,
          },
          Immutable.Map {
            "amount": 5768,
            "currency": "usd",
            "included_tickets": 15000,
            "interval": "month",
            "name": "SMS Addon 15000 Monthly",
            "price_id": "price_1LkBzLI9qXomtXqSgzXlOnP4",
            "product_id": "prod_MT8Fzk7vmcT73m",
            "sms_extra_ticket_cost": 0.77,
          },
          Immutable.Map {
            "amount": 0,
            "currency": "usd",
            "included_tickets": 0,
            "interval": "month",
            "name": "SMS Addon Free Monthly",
            "price_id": "price_1M6V7uI9qXomtXqSpsoVQWUw",
            "product_id": "prod_MT8Fzk7vmcT73m",
            "sms_extra_ticket_cost": 1.6,
          },
        ],
      },
      Immutable.Map {
        "id": "prod_MT6fyh00TCFRGZ",
        "type": "voice",
        "prices": Immutable.List [
          Immutable.Map {
            "amount": 175,
            "currency": "usd",
            "included_tickets": 250,
            "interval": "month",
            "name": "Voice Addon 250 Monthly",
            "price_id": "price_1LkAzlI9qXomtXqSxOOrhzcU",
            "product_id": "prod_MT6fyh00TCFRGZ",
            "voice_extra_ticket_cost": 1.4,
          },
          Immutable.Map {
            "amount": 1750,
            "currency": "usd",
            "included_tickets": 7500,
            "interval": "month",
            "name": "Voice Addon 7500 Monthly",
            "price_id": "price_1LkB44I9qXomtXqS4aF9ibna",
            "product_id": "prod_MT6fyh00TCFRGZ",
            "voice_extra_ticket_cost": 0.47,
          },
          Immutable.Map {
            "amount": 0,
            "currency": "usd",
            "included_tickets": 0,
            "interval": "month",
            "name": "Voice Addon Free Monthly",
            "price_id": "price_1LkClqI9qXomtXqSlgYCG6Wm",
            "product_id": "prod_MT6fyh00TCFRGZ",
            "voice_extra_ticket_cost": 2.4,
          },
        ],
      },
    ],
  },
  "chats": Immutable.Map {
    "tickets": Immutable.List [
      Immutable.Map {
        "channel": "chat",
        "customer": Immutable.Map {
          "email": "marie@gorgias.io",
          "id": 4,
          "name": "Marie Curie",
        },
        "id": 32,
        "is_unread": true,
        "last_message_datetime": "2020-10-20T06:06:28.223864",
      },
    ],
  },
  "currentAccount": Immutable.Map {
    "settings": Immutable.List [
      Immutable.Map {
        "id": 2,
        "type": "business-hours",
        "data": Immutable.Map {
          "business_hours": Immutable.List [
            Immutable.Map {
              "days": "1,2,3,4,5",
              "from_time": "00:00",
              "to_time": "01:00",
            },
            Immutable.Map {
              "days": "7",
              "from_time": "07:00",
              "to_time": "22:00",
            },
          ],
          "timezone": "US/Pacific",
        },
      },
    ],
    "current_subscription": Immutable.Map {
      "trial_start_datetime": "2017-08-23T01:38:53+00:00",
      "trial_end_datetime": "2017-09-06T01:38:53+00:00",
      "status": "trialing",
      "start_datetime": "2017-08-23T01:38:53+00:00",
      "products": Immutable.Map {
        "prod_LsH6kV35G6zKWo": "price_1LJBjWI9qXomtXqSPZn8LqlD",
      },
    },
    "domain": "acme",
    "meta": Immutable.Map {},
    "deactivated_datetime": null,
    "stripe_id": "cus_BGKUKAzUbK1bix",
    "user_id": 1,
    "created_datetime": "2017-08-23T01:38:52.479339+00:00",
    "status": Immutable.Map {
      "status": "active",
    },
    "id": 1,
    "features": Immutable.Map {
      "view_sharing": Immutable.Map {
        "enabled": true,
      },
      "automation_cancellations_flow": Immutable.Map {
        "enabled": true,
      },
      "revenue_statistics": Immutable.Map {
        "enabled": true,
      },
      "facebook_comment": Immutable.Map {
        "enabled": true,
      },
      "satisfaction_surveys": Immutable.Map {
        "enabled": true,
      },
      "api_1st_party_rate_limit": Immutable.Map {
        "enabled": true,
      },
      "twitter_integration": Immutable.Map {
        "enabled": true,
        "limit": 2,
      },
      "user_roles": Immutable.Map {
        "enabled": true,
      },
      "magento_integration": Immutable.Map {
        "enabled": true,
      },
      "automation_managed_rules": Immutable.Map {
        "enabled": true,
      },
      "overview_live_statistics": Immutable.Map {
        "enabled": true,
      },
      "instagram_comment": Immutable.Map {
        "enabled": true,
      },
      "yotpo_integration": Immutable.Map {
        "enabled": true,
      },
      "help_center": Immutable.Map {
        "enabled": true,
      },
      "api_3rd_party_rate_limit": Immutable.Map {
        "enabled": true,
      },
      "automation_return_flow": Immutable.Map {
        "enabled": true,
      },
      "instagram_dm": Immutable.Map {
        "enabled": true,
      },
      "teams": Immutable.Map {
        "enabled": true,
      },
      "automation_report_issue_flow": Immutable.Map {
        "enabled": true,
      },
      "automation_self_service_statistics": Immutable.Map {
        "enabled": true,
      },
      "phone_number": Immutable.Map {
        "enabled": true,
        "limit": 5,
      },
      "automation_track_order_flow": Immutable.Map {
        "enabled": true,
      },
      "chat_campaigns": Immutable.Map {
        "enabled": true,
      },
      "auto_assignment": Immutable.Map {
        "enabled": true,
      },
      "users_live_statistics": Immutable.Map {
        "enabled": true,
      },
    },
  },
  "currentUser": Immutable.Map {
    "lastname": "Plugaru",
    "settings": Immutable.List [
      Immutable.Map {
        "data": Immutable.Map {
          "show_macros": true,
          "macros_default_to_search_popover": true,
          "prefill_best_macro": true,
          "available": true,
          "hide_tips": true,
          "forward_calls": false,
        },
        "id": 3,
        "type": "preferences",
      },
    ],
    "meta": Immutable.Map {
      "profile_picture_url": "https://config.gorgias.io/production/picture",
    },
    "active": true,
    "bio": "CTO",
    "deactivated_datetime": null,
    "has_2fa_enabled": false,
    "name": "Alex Plugaru",
    "external_id": "2",
    "created_datetime": "2016-12-22T19:36:12.487448+00:00",
    "role": Immutable.Map {
      "name": "admin",
    },
    "country": "US",
    "language": "en",
    "timezone": "EST",
    "id": 2,
    "firstname": "Alex",
    "email": "alex@gorgias.io",
    "updated_datetime": "2016-12-22T19:36:12.489432+00:00",
  },
  "entities": Object {
    "phoneNumbers": Object {},
    "sections": Object {
      "1": Object {
        "created_datetime": "2020-10-20T15:10:01.996156+00:00",
        "decoration": Object {
          "emoji": "😀",
        },
        "id": 1,
        "name": "test",
        "private": false,
        "updated_datetime": "2020-10-20T15:10:01.996168+00:00",
        "uri": "/api/view-sections/1/",
      },
    },
    "tags": Object {
      "4": Object {
        "created_datetime": "2020-10-20T14:57:28.155180+00:00",
        "decoration": Object {
          "color": "#ABB8C3",
        },
        "deleted_datetime": null,
        "description": null,
        "id": 4,
        "name": "refund accepted",
        "uri": "/api/tags/4/",
      },
    },
    "views": Object {
      "9": Object {
        "category": "system",
        "created_datetime": "2020-10-20T14:57:27.612323+00:00",
        "deactivated_datetime": null,
        "decoration": null,
        "fields": Array [
          "name",
          "email",
          "created",
          "updated",
        ],
        "filters": "eq(user.roles.name, \\"user\\")",
        "filters_ast": Object {},
        "group_by": null,
        "id": 9,
        "name": "All customers",
        "order_by": "updated_datetime",
        "order_dir": "desc",
        "search": null,
        "section_id": null,
        "slug": "all-customers",
        "type": "customer-list",
        "uri": "/api/views/9/",
        "visibility": "public",
      },
    },
  },
  "integrations": Immutable.Map {
    "authentication": Immutable.Map {
      "shopify": Immutable.Map {
        "redirect_uri": "https://{shop_name}.myshopify.com/admin/oauth/authorize?client_id=0d5570af054ce903798f1ae621c02291&scope=read_all_orders%2Cread_orders%2Cwrite_orders%2Cwrite_order_edits%2Cread_order_edits%2Cread_customers%2Cwrite_customers%2Cread_themes%2Cwrite_themes%2Cread_products%2Cread_draft_orders%2Cwrite_draft_orders&redirect_uri=https%3A%2F%2Faccounts.gorgias.xyz%2Fintegrations%2Fshopify%2Fauth%2Fcallback%2F&state=eyJhY2NvdW50X2RvbWFpbiI6ICJhY21lIn0%3D",
      },
      "facebook": Immutable.Map {
        "redirect_uri": "https://www.facebook.com/v10.0/dialog/oauth?client_id=397863240692179&redirect_uri=https%3A%2F%2Faccounts.gorgias.xyz%2Fintegrations%2Ffacebook%2Fauth%2Fcallback&response_type=token&scope=pages_manage_ads%2Cpages_manage_metadata%2Cpages_read_engagement%2Cpages_read_user_content%2Cpages_manage_posts%2Cpages_manage_engagement%2Cbusiness_management%2Cpages_show_list%2Cread_page_mailboxes%2Cpages_messaging%2Cpages_messaging_subscriptions%2Cinstagram_basic%2Cinstagram_manage_comments%2Cinstagram_manage_messages%2Cads_read%2Cads_management&state=eyJhY2NvdW50X2RvbWFpbiI6ICJhY21lIiwgImlzX3JlY29ubmVjdCI6IGZhbHNlfQ%3D%3D",
        "redirect_uri_reconnect": "https://www.facebook.com/v10.0/dialog/oauth?client_id=397863240692179&redirect_uri=https%3A%2F%2Faccounts.gorgias.xyz%2Fintegrations%2Ffacebook%2Fauth%2Fcallback&response_type=token&scope=pages_manage_ads%2Cpages_manage_metadata%2Cpages_read_engagement%2Cpages_read_user_content%2Cpages_manage_posts%2Cpages_manage_engagement%2Cbusiness_management%2Cpages_show_list%2Cread_page_mailboxes%2Cpages_messaging%2Cpages_messaging_subscriptions%2Cinstagram_basic%2Cinstagram_manage_comments%2Cinstagram_manage_messages%2Cads_read%2Cads_management&state=eyJhY2NvdW50X2RvbWFpbiI6ICJhY21lIiwgImlzX3JlY29ubmVjdCI6IHRydWV9",
      },
      "recharge": Immutable.Map {
        "redirect_uri": "/integrations/recharge/auth/pre-callback/",
      },
      "aircall": Immutable.Map {
        "show_old_url": false,
        "webhook_url": "https://incoming.gorgias.xyz/api/incoming/aircall/BqarjZ9LD2nbGxV9OPdv5Q3zY4eo617w/",
        "webhook_url_new": "https://incoming.gorgias.xyz/api/incoming/aircall/nZMRyOXmzx4QD53kXvpebGljr09B2kE6/",
      },
      "smile": Immutable.Map {
        "redirect_uri": "https://connect.smile.io/oauth2/authorize?redirect_uri=https%3A%2F%2Faccounts.gorgias.xyz%2Fintegrations%2Fsmile%2Fauth%2Fcallback%2F&client_id=08YEKLFR5jmB0oDujlh8nFUDIaTK3PjWxOAj2HTmWj8&state=eyJhY2NvdW50X2RvbWFpbiI6ICJhY21lIn0%3D&response_type=code",
      },
      "outlook": Immutable.Map {
        "redirect_uri": "/integrations/outlook/auth/pre-callback/",
      },
      "twitter": Immutable.Map {
        "redirect_uri": "/integrations/twitter/auth/pre-callback/",
      },
      "magento2": Immutable.Map {
        "redirect_uri": "/integrations/magento2/auth/pre-callback/",
      },
      "email": Immutable.Map {
        "forwarding_email_address": "zp7d01g9zorymjke@emails.gorgias.xyz",
      },
      "yotpo": Immutable.Map {
        "redirect_uri": "/integrations/yotpo/auth/pre-callback/",
      },
      "gmail": Immutable.Map {
        "redirect_uri": "/integrations/gmail/auth/pre-callback",
      },
      "smooch": Immutable.Map {
        "redirect_uri": "https://app.smooch.io/oauth/authorize/?client_id=gorgias_dev&response_type=code&state=eyJhY2NvdW50X2RvbWFpbiI6ICJhY21lIn0%3D&redirect_uri=https%3A%2F%2Faccounts.gorgias.xyz%2Fintegrations%2Fsmooch%2Fauth%2Fcallback%2F",
      },
    },
    "extra": Immutable.Map {
      "facebook": Immutable.Map {
        "max_account_ads": 100,
      },
      "gorgias_chat": Immutable.Map {
        "bundleUrl": "https://chat-bundle.test.gorgias.chat",
        "chatUrl": "chat-api.test.gorgias.chat",
        "wsUrl": "chat-ws.test.gorgias.chat",
      },
    },
    "integrations": Immutable.List [],
  },
  "schemas": Immutable.Map {
    "definitions": Immutable.Map {},
    "info": Immutable.Map {
      "description": "The new generation helpdesk",
      "title": "Gorgias",
      "version": "0.0.1",
    },
    "paths": Immutable.Map {},
    "swagger": "2.0",
  },
  "tags": Immutable.Map {
    "items": Immutable.List [
      Immutable.Map {
        "created_datetime": "2020-10-20T14:57:28.155180+00:00",
        "decoration": Immutable.Map {
          "color": "#ABB8C3",
        },
        "deleted_datetime": null,
        "description": null,
        "id": 4,
        "name": "refund accepted",
        "uri": "/api/tags/4/",
      },
    ],
  },
  "teams": Immutable.Map {
    "all": Immutable.Map {},
  },
  "views": Immutable.Map {
    "active": Immutable.Map {},
    "counts": Immutable.Map {},
    "items": Immutable.List [
      Immutable.Map {
        "search": null,
        "order_by": "updated_datetime",
        "deactivated_datetime": null,
        "name": "All customers",
        "slug": "all-customers",
        "uri": "/api/views/9/",
        "decoration": null,
        "created_datetime": "2020-10-20T14:57:27.612323+00:00",
        "visibility": "public",
        "section_id": null,
        "group_by": null,
        "fields": Immutable.List [
          "name",
          "email",
          "created",
          "updated",
        ],
        "type": "customer-list",
        "id": 9,
        "filters": "eq(user.roles.name, \\"user\\")",
        "order_dir": "desc",
        "filters_ast": Immutable.Map {},
        "category": "system",
      },
    ],
    "recent": Immutable.Map {
      "9": Immutable.Map {
        "inserted_datetime": "2020-10-28T09:23:35.294Z",
        "updated_datetime": "2020-10-28T09:23:35.294Z",
      },
    },
  },
}
`;
